--- a/templates/layout/head.html
+++ b/templates/layout/head.html
@@ -3,6 +3,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Take some of the stress out of planning your wedding with this easy-to-use, RSVP solution. Get your guests to register their attendance and food options through a single, user-friendly form integrated with your wedding website.">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="static/favicon.png">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" type="text/css">
     <!-- Bootstrap core CSS -->
